--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,14 +6,16 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
-    <script src="src/ninjaDancer.js"></script>
+    <script src="src/bonesDancer.js"></script>
+    <script src="src/DonaldTrumpdancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="ninjaDancer">add Ninja dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="DonaldTrumpdancer">add D.Trump dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BonesDancer">add Bones dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDtrumpDancer">add D.Trump dancer</a>
+    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
